compose/envoy/lds.yaml
version_info: 0,
resources:
  - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    name: web_listener
    address:
      socket_address:
        address: "0.0.0.0"
        port_value: 80
    filter_chains:
      - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: auto
              stat_prefix: ingress_http
              access_log:
                - name: envoy.file_access_log
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                    path: "/dev/stdout"
              route_config:
                name: local_route
                virtual_hosts:
                  - name: web_backend
                    domains:
                      - web
                      - web.app
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: web
              http_filters:
                - name: envoy.filters.http.jwt_authn
                  config:
                    providers:
                      oidc_provider:
                        issuer: http://keycloak/auth/realms/test
                        audiences:
                          - admin-cli
                        forward: true
                        remote_jwks:
                          http_uri:
                            uri: http://keycloak/auth/realms/test/protocol/openid-connect/certs
                            cluster: keycloak
                            timeout: 5s
                          cache_duration:
                            seconds: 300
                    rules:
                      - match { prefix: /oidc }
                        requires:
                          provider_name: oidc_provider
                    bypass_cors_preflight: true
                - name: envoy.filters.http.wasm
                  typed_config:
                    #"@type": type.googleapis.com/udpa.type.v1.TypedStruct
                    "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                    config:
                      name: 3scale-auth
                      root_id: "a_root_id"
                      vm_config:
                        vm_id: "1"
                        runtime: envoy.wasm.runtime.v8
                        configuration:
                          "@type": type.googleapis.com/google.protobuf.StringValue
                          value: "vm configuration here!"
                        code:
                          local:
                            filename: "/etc/proxy-wasm/threescale_wasm_auth.wasm"
                        allow_precompiled: false
                      configuration:
                        #"@type": type.googleapis.com/udpa.type.v1.TypedStruct
                        "@type": type.googleapis.com/google.protobuf.StringValue
                        value: |
                          {
                            "system": {
                              "upstream": {
                                "name": "outbound|443||multitenant.3scale.net",
                                "url": "https://istiodevel-admin.3scale.net",
                                "timeout": 5000
                              },
                              "token": "invalid-token"
                            },
                            "backend": {
                              "upstream": {
                                "name": "outbound|443||su1.3scale.net",
                                "url": "https://su1.3scale.net",
                                "timeout": 5000
                              }
                            },
                            "services": [
                              {
                                "id": "2555417834780",
                                "token": "invalid-token",
                                "authorities": [
                                  "web",
                                  "web.app"
                                ],
                                "credentials": [
                                  {
                                    "kind": "user_key",
                                    "key": "x-api-key",
                                    "locations": [
                                      "header",
                                      "query_string"
                                    ]
                                  }
                                ],
                                "mapping_rules": [
                                  {
                                    "method": "get",
                                    "pattern": "/",
                                    "usages": [
                                      {
                                        "name": "hits",
                                        "delta": 1
                                      }
                                    ]
                                  },
                                  {
                                    "method": "get",
                                    "pattern": "/productpage",
                                    "usages": [
                                      {
                                        "name": "ticks",
                                        "delta": 1
                                      }
                                    ]
                                  }
                                ]
                              }
                            ]
                          }
                      fail_open: false
                - name: envoy.filters.http.router
